--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "puppeteer": "^1.12.2",
     "vue": "^2.5.22",
     "vue-axios": "^2.1.4",
     "vuelidate": "^0.7.4",
