--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "puppeteer": "^1.12.2",
     "vue": "^2.5.22",
     "vue-axios": "^2.1.4",
+    "vue-query-builder": "^0.7.1",
     "vuelidate": "^0.7.4",
     "vuetify": "^1.5.1"
   },
