--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue": "^2.5.22",
     "vue-axios": "^2.1.4",
     "vue-query-builder": "^0.7.1",
+    "vue-router": "^3.0.2",
     "vuelidate": "^0.7.4",
     "vuetify": "^1.5.1"
   },
