--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "auth0-js": "^9.10.0",
     "axios": "^0.18.0",
     "puppeteer": "^1.12.2",
     "vue": "^2.5.22",
