--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "auth0-js": "^9.10.0",
     "axios": "^0.18.0",
     "puppeteer": "^1.12.2",
     "vue": "^2.5.22",
     "vue-axios": "^2.1.4",
     "vue-router": "^3.0.2",
     "vuelidate": "^0.7.4",
-    "vuetify": "^1.5.1"
+    "vuetify": "^1.5.1",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
